freshed-rs-macros/tests/ui/fail/async_marker_in_html.stderr
error: async component marker is only supported in html_async! and html_async_in!
  --> tests/ui/fail/async_marker_in_html.rs:14:29
   |
14 |     let _ = html!(<UserCard async>{"x"}</UserCard>);
   |                             ^^^^^
